--- a/angular-app/src/app/user-create/user-create.component.html
+++ b/angular-app/src/app/user-create/user-create.component.html
@@ -18,7 +18,7 @@
             <input type="text" class="form-control" id="Password" [(ngModel)]= "user.password" name="Password">
         </div>
 
-    
+        <button type="submit">Submit</button>
     
     </form>
 </div>
